gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23279.d
version https://git-lfs.github.com/spec/v1
oid sha256:2b1438c13d24401b84525b9c98fc5a2072e09c4e40f21a7ded2621d8fadbdbe4
size 241
